Update calendar page title

--- a/2025_civitas_fridays.html
+++ b/2025_civitas_fridays.html
@@ -82,7 +82,7 @@
   </style>
 </head>
 <body>
-  <h1>2025 Calendar</h1>
+  <h1>2025 Civitas Fridays</h1>
   <div class="calendar"></div>
 
   <script>
