Update 2026 calendar styles

--- a/2026_civitas_fridays.html
+++ b/2026_civitas_fridays.html
@@ -6,11 +6,20 @@
   <title>2026 Civitas Fridays</title>
   <style>
     :root {
+      --bg: #000000;
+      --white: #1c1c1e;
+      --text: #ffffff;
+      --accent: #0a84ff;
+      --highlight: #66d9a6;
+      --gray: #2c2c2e;
+    }
+
+    [data-theme="light"] {
       --bg: #f2f2f7;
       --white: #fff;
       --text: #1c1c1e;
       --accent: #007aff;
-      --highlight: #ffd60a;
+      --highlight: #66d9a6;
       --gray: #e5e5ea;
     }
 
@@ -20,16 +29,49 @@
       padding: 0;
       background-color: var(--bg);
       color: var(--text);
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+      background-color: var(--white);
+      box-shadow: 0 2px 8px rgba(255,255,255,0.1);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    [data-theme="light"] .header {
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
 
     h1 {
       text-align: center;
-      padding: 1rem;
       font-size: 2rem;
       font-weight: 600;
-      background-color: var(--white);
       margin: 0;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      flex-grow: 1;
+    }
+
+    .theme-toggle {
+      background: none;
+      border: 2px solid var(--accent);
+      border-radius: 50px;
+      padding: 8px 16px;
+      color: var(--accent);
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .theme-toggle:hover {
+      background-color: var(--accent);
+      color: var(--white);
     }
 
     .calendar {
@@ -42,10 +84,15 @@
     .month {
       background: var(--white);
       border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      box-shadow: 0 4px 12px rgba(255,255,255,0.1);
       padding: 16px;
       display: flex;
       flex-direction: column;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    [data-theme="light"] .month {
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
 
     .month h2 {
@@ -81,8 +128,14 @@
     }
   </style>
 </head>
-<body>
-  <h1>2026 Civitas Fridays</h1>
+<body data-theme="dark">
+  <div class="header">
+    <h1>2026 Civitas Fridays</h1>
+    <button class="theme-toggle" onclick="toggleTheme()">
+      <span id="theme-icon">☀️</span>
+      <span id="theme-text">Light</span>
+    </button>
+  </div>
   <div class="calendar"></div>
 
   <script>
@@ -146,7 +199,43 @@
       }
     };
 
+    const toggleTheme = () => {
+      const body = document.body;
+      const themeIcon = document.getElementById('theme-icon');
+      const themeText = document.getElementById('theme-text');
+      
+      if (body.getAttribute('data-theme') === 'dark') {
+        body.setAttribute('data-theme', 'light');
+        themeIcon.textContent = '🌙';
+        themeText.textContent = 'Dark';
+        localStorage.setItem('theme', 'light');
+      } else {
+        body.setAttribute('data-theme', 'dark');
+        themeIcon.textContent = '☀️';
+        themeText.textContent = 'Light';
+        localStorage.setItem('theme', 'dark');
+      }
+    };
+
+    // Initialize theme from localStorage or default to dark
+    const initTheme = () => {
+      const savedTheme = localStorage.getItem('theme') || 'dark';
+      const body = document.body;
+      const themeIcon = document.getElementById('theme-icon');
+      const themeText = document.getElementById('theme-text');
+      
+      body.setAttribute('data-theme', savedTheme);
+      if (savedTheme === 'light') {
+        themeIcon.textContent = '🌙';
+        themeText.textContent = 'Dark';
+      } else {
+        themeIcon.textContent = '☀️';
+        themeText.textContent = 'Light';
+      }
+    };
+
     generateCalendar();
+    initTheme();
   </script>
 </body>
 </html>
